MDEV-8427 main.connect fails on ppc64el in 10.0 as of 1a8cf15d

Followup fix for bug#35074: update the second location where
max_used_connections is calculated (to be like the
first one).